# inkwell

./: .gitignore  README.md
cli/: Cargo.toml  README.md
cli/.inkwell/: decorations.json
cli/src/: analyzer.rs  instrumentor.rs  main.rs  reporter.rs  types.rs
mocks/: token.rs
swap/: Cargo.toml
swap/src/: lib.rs  main.rs
vscode/: README.md  package.json
vscode/src/: decorations.ts  extension.ts  main.ts  profiler.ts
