[package]
name = "cli"
version = "0.1.0"
edition = "2024"
authors = ["cenwadike"]
description = "Ink profiler for Stylus smart contracts"
license = "Apache License"

[[bin]]
name = "inkwell"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
syn = { version = "2.0.114", features = [
    "full",
    "parsing",
    "visit-mut",
    "visit",
    "extra-traits",
] }
quote = "1.0"
proc-macro2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
anyhow = "1.0"
prettyplease = "0.2"
regex = "1.12.3"
alloy = { version = "0.6", features = ["full"] }
eyre = "0.6.12"
tempfile = "3.24.0"
tokio = { version = "1.49.0", features = ["rt", "macros"] }
hex = "0.4.3"
rand = "0.9.2"
toml = "0.9.11"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
