[package]
name = "swap"
version = "0.1.9"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/cenwadike/inkwell/swap"
repository = "https://github.com/cenwadike/inkwell/swap"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "Implements a fixed-cost token sales contract"
authors = ["kombi <cenwadike@gmail.com>"]

[dependencies]
stylus-sdk = "0.8.4"
alloy-sol-types = "=0.8.20"
alloy-primitives = "=0.8.20"
ruint = "=1.12.3"

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[[bin]]
name = "stylus-dorg-task"
path = "src/main.rs"


[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
